Fixed some layout bugs

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -29,3 +29,4 @@
 //
 // Example:
 // @linkColor: #ff0000;
+.form-actions {background: none; border-top: none;}
